# ContinuumSystem

./: CMakeLists.txt  CMakePresets.json  Makefile  Makefile_old  README.md  batch_modes.sh  benchmark.cpp  exec.sh  extra_exec.sh  iterate.sh  ul_batch.sh
cmake/: CascadelakeCompilerFlags.cmake  DefaultCompilerFlags.cmake  IcelakeCompilerFlags.cmake  continuum_options.cmake
params/: cluster.config  extra_params.config  params.config  test.config  ul_cluster.config
slurm/: modes.slurm  ul_modes.slurm
sources/: ContinuumSystem.cpp  NoScreeningIntegrals.cpp
sources/Continuum/: GlobalDefinitions.hpp  Incrementer.cpp  Incrementer.hpp  ModeHelper.cpp  ModeHelper.hpp  ModelAttributes.hpp  ModelInitializer.cpp  ModelInitializer.hpp  MomentumRanges.cpp  MomentumRanges.hpp  PhononInteraction.cpp  PhononInteraction.hpp  SCModel.cpp  SCModel.hpp  SplineContainer.cpp  SplineContainer.hpp
test_params/: strong_attraction.config  weak_screening.config
tests/: normal_screening.config  plot.py  run_test.py  test_config.cmake
